# haskell-sqlitetest-error

./: Main.hs  sqlitetest.cabal
